data/derived/fa15/progs/unify/prog1243.ml.out
Characters 57-60:
  2+2;;
  ^^^
Error: This expression has type int but an expression was expected of type
         'a list
